# AirGraph

./: .gitignore  README.en.md  README.md
airgraph/: .classpath  .factorypath  .project  pom.xml
airgraph/src/main/java/com/sec/airgraph/: MainApplication.java
airgraph/src/main/java/com/sec/airgraph/config/: WebMvcConfig.java
airgraph/src/main/java/com/sec/airgraph/controller/: KerasController.java  MainController.java
airgraph/src/main/java/com/sec/airgraph/form/: KerasForm.java  MainForm.java
airgraph/src/main/java/com/sec/airgraph/initializer/: WebApplicationInitializer.java
airgraph/src/main/java/com/sec/airgraph/service/: FieldManagementService.java  KerasService.java  (+5 more)
airgraph/src/main/resources/: application.properties  logback.xml
airgraph/src/main/resources/static/css/: jquery-ui.min.css  jquery-ui.structure.min.css  jquery-ui.theme.min.css  jquery.contextMenu.css  style.css
airgraph/src/main/resources/static/js/: common.js  dataset-main.js  jquery.contextMenu.js  keras-contextmenu.js  keras-dao.js  keras-main.js  rt-component.js  rt-contextmenu.js  rt-dao.js  rt-form.js  rt-main.js  zip.js
airgraph/src/main/resources/templates/common/: head.html
airgraph/src/main/resources/templates/keras/: keras.html
airgraph/src/main/resources/templates/rtsystem/: main.html
docs/: Makefile  README.md  end.html  genindex.html  index.html  keras.html  make.bat  make.exe.stackdump  objects.inv  requirements.txt  rtm.html  rtm_keras.html  search.html  searchindex.js  start.html
docs/_static/: rtm_keras.rst
docs/source/: conf.py  keras.rst  rtm.rst  rtm_keras.rst  start.rst
docs_src/: make.bat
docs_src/source/: end.rst  index.rst
release_app/hosts/: AirGraphHostConfig.yaml  gitHubConfig.yaml  wasanbonHostConfig.yaml
release_app/keras_models/MnistSample/: MnistSample.json  data_maker.py
release_app/keras_templates/layer/Advanced Activations/: leakyrelu.json
release_app/keras_templates/layer/Convoluational/: conv1d.json  conv2d.json  conv3d.json  upsampling2d.json
release_app/keras_templates/layer/Core/: activation.json  activityregularization.json  dense.json  dropout.json  flatten.json  masking.json  permute.json  repeatvector.json  reshape.json
release_app/keras_templates/layer/Merge/: concatenate.json
release_app/keras_templates/layer/Normalization/: batchnormalization.json
release_app/keras_templates/layer/Pooling/: maxpooling2d.json
release_app/keras_templates/layer_property/Advanced Activations/: leakyrelu.json
release_app/keras_templates/layer_property/Convolutional/: conv1d.json  conv2d.json  conv3d.json  updampling2d.json
release_app/keras_templates/layer_property/Core/: activation.json  activityregularization.json  dense.json  dropout.json  flatten.json  masking.json  permute.json  repeatvector.json  reshape.json
release_app/keras_templates/layer_property/Merge/: concatenate.json
release_app/keras_templates/layer_property/Normalization/: batchnormalization.json
release_app/keras_templates/layer_property/Pooling/: maxpooling2d.json
release_app/keras_templates/model/functionalAPI_template/: Functional_API.json
release_app/keras_templates/model/sequential_template/: Sequential.json
release_app/rtm_scripts/: rename_all_under_component.sh  rename_contents.sh  rename_file.sh
release_app/rtm_templates/template_cpp/: .project  .travis.yaml.template_cpp  CMakeLists.txt  README.template_cpp  RTC.xml  rtc.conf  template_cpp.conf
release_app/rtm_templates/template_cpp/cmake/: template_cpp-config.cmake.in  wix.xsl.in
release_app/rtm_templates/template_cpp/doc/: conf.py.in  doxyfile.in
release_app/rtm_templates/template_cpp/doc/content/: index.txt  index_j.txt
release_app/rtm_templates/template_cpp/include/: CMakeLists.txt
release_app/rtm_templates/template_cpp/include/template_cpp/: CMakeLists.txt  template_cpp.h
release_app/rtm_templates/template_cpp/src/: CMakeLists.txt  template_cpp.cpp  template_cppComp.cpp
release_app/rtm_templates/template_cpp/test/include/template_cppTest/: template_cppTest.h
release_app/rtm_templates/template_cpp/test/src/: template_cppTest.cpp  template_cppTestComp.cpp
release_app/rtm_templates/template_java/: .classpath  .project  CMakeLists.txt  README.template_java  RTC.xml  build_template_java.xml  rtc.conf  run_template_java.xml  template_java.bat  template_java.conf  template_java.sh
release_app/rtm_templates/template_java/cmake/: template_java-config.cmake.in
release_app/rtm_templates/template_java/cmake_modules/: FindOpenRTMJava.cmake  cmake_javacompile.cmake.in
release_app/rtm_templates/template_java/cpack_resources/: wix.xsl.in
release_app/rtm_templates/template_java/doc/: conf.py.in
release_app/rtm_templates/template_java/doc/content/: index.txt  index_j.txt
release_app/rtm_templates/template_java/include/: CMakeLists.txt
release_app/rtm_templates/template_java/include/template_java/: CMakeLists.txt
release_app/rtm_templates/template_java/src/: CMakeLists.txt  template_java.java  template_javaComp.java  template_javaImpl.java
release_app/rtm_templates/template_java/test/src/: template_javaTest.java  template_javaTestComp.java  template_javaTestImpl.java
release_app/rtm_templates/template_python/: .project  CMakeLists.txt  README.template_python  RTC.xml  rtc.conf  template_python.conf  template_python.py
release_app/rtm_templates/template_python/cmake/: cpack_options.cmake.in  template_python-config.cmake.in
release_app/rtm_templates/template_python/cpack_resources/: wix.xsl.in
release_app/rtm_templates/template_python/doc/: conf.py.in  doxyfile.in
release_app/rtm_templates/template_python/doc/content/: index.txt  index_j.txt
release_app/rtm_templates/template_python/idl/: CMakeLists.txt
release_app/rtm_templates/template_python/include/: CMakeLists.txt
release_app/rtm_templates/template_python/include/template_python/: CMakeLists.txt
release_app/rtm_templates/template_python/src/: CMakeLists.txt
release_app/rtm_templates/template_python/test/: template_pythonTest.py
release_app/scripts/: airgraph  build_airgraph.sh  install_airgraph.sh
(+66 files in other folders)
